# YADRO-Test-Task

./: .gitignore  CMakeLists.txt  Cell.hpp  Csv.cpp  Csv.hpp  Log.cpp  Log.hpp  Parser.hpp  README.md  main.cpp  test.sh
tests/: fail.csv  in1.csv  in2.csv  in3.csv  in4.csv  in5.csv  in6.csv  in7.csv  long.csv  noNum.csv  out1.csv  out2.csv  out3.csv  out4.csv  short.csv
